--- a/AirTickets/AirTickets/Views/Home/Contact.cshtml
+++ b/AirTickets/AirTickets/Views/Home/Contact.cshtml
@@ -15,8 +15,23 @@
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
 
-<h3>@ViewBag.TheMessage</h3>
-<form method="post">
-    <textarea name="message" class="form-control"></textarea>
-    <input type="submit" value="Send"/>
-</form>
+
+<div id="formSection">
+    <h3>@ViewBag.TheMessage</h3>
+    @using (Ajax.BeginForm(new AjaxOptions
+    {
+        HttpMethod = "post",
+        InsertionMode = InsertionMode.Replace,
+        UpdateTargetId = "formSection"
+    }))
+    {
+        <textarea name="message" class="form-control"></textarea>
+        <button type="submit" class="btn btn-primary">
+            Send <span class="glyphicon glyphicon-circle-arrow-right"></span>
+        </button>
+    }
+</div>
+
+@section scripts{
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+}
