--- a/AirTickets/AirTickets/Views/Home/Index.cshtml
+++ b/AirTickets/AirTickets/Views/Home/Index.cshtml
@@ -2,30 +2,38 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Air Tickets</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="container body-content">
+    <div class="row">
+        <div class="col-md-12">
+            <img class="img-responsive center-block" src="https://article.images.consumerreports.org/prod/content/dam/CRO%20Images%202017/Money/May/CR-Money-Hero-Booking-Multiple-Airline-Tickets-05-17-v2" alt="Alternate Text" />
+        </div>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+@*<ul class="nav nav-tabs">
+    <li role="presentation">
+       <a href="@Html.Partial("Flight")" >Flight</a>
+    </li>
+    <li role="presentation">
+        <a href="@Html.Partial("Hotel")" >Hotel</a>
+    </li>
+   
+</ul>*@
+
+@Ajax.ActionLink("Flights", "Flight",
+    new AjaxOptions
+    {
+        UpdateTargetId = "FlightList",
+        InsertionMode = InsertionMode.Replace,
+        HttpMethod = "GET"
+})
+
+@Ajax.ActionLink("Hotels", "Hotel",
+    new AjaxOptions
+    {
+         Url = "~/Views/Home/Hotel",
+        UpdateTargetId = "HotelList",
+        InsertionMode = InsertionMode.Replace,
+        HttpMethod = "GET"
+    })
+
