--- a/AirTickets/AirTickets/Views/Home/Hotel.cshtml
+++ b/AirTickets/AirTickets/Views/Home/Hotel.cshtml
@@ -1,21 +1,15 @@
 ﻿
-@{
-    ViewBag.Title = "Hotel";
-}
-
-
 <form>
-    <div class="form-group">
-        <label for="email">Email address:</label>
-        <input type="email" class="form-control" id="email">
+    <div class="input-group">
+        <span class="input-group-addon" id="basic-addonHotel">Hotel</span>
+        <input type="text" class="form-control" placeholder="Name" aria-describedby="basic-addon1">
     </div>
-    <div class="form-group">
-        <label for="pwd">Password:</label>
-        <input type="password" class="form-control" id="pwd">
+
+    <div class="input-group">
+        <span class="input-group-addon" id="basic-addonCity">City</span>
+        <input type="text" class="form-control" placeholder="City" aria-describedby="basic-addon1">
     </div>
-    <div class="checkbox">
-        <label><input type="checkbox"> Remember me</label>
-    </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+
+    <button type="submit" class="btn btn-default">Search</button>
 </form>
 
