Add page for editing user dashboard

--- a/AirTickets/AirTickets/Views/ViewProfile/Details.cshtml
+++ b/AirTickets/AirTickets/Views/ViewProfile/Details.cshtml
@@ -6,37 +6,41 @@
 
 <h2>Details</h2>
 
-<div>
-    <h4>ViewProfile</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <h4>ViewProfile</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.FirstName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.FirstName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.LastName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.LastName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NumberOfTickets)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.NumberOfTickets)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.NumberOfTickets)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.NumberOfTickets)
+            </dd>
 
-    </dl>
+        </dl>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+<div class="col-md-6 col-md-offset-3">
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
+</div>
