--- a/AirTickets/AirTickets.Web/Views/Home/About.cshtml
+++ b/AirTickets/AirTickets.Web/Views/Home/About.cshtml
@@ -1,7 +1,18 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
+
+<address>
+    Air Ticket - online tickets<br />
+    Sofia Airport, Bulgaria<br />
+    <abbr title="Phone">Phone:</abbr>
+    +359888123456
+    <br />
+    <abbr title="Email">Email:</abbr>
+    airline.ticket@air.com
+</address>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46918.65437668859!2d23.38267881867653!3d42.6949137163504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa88a89127587d%3A0x5732f9ec9a8231a4!2z0JvQtdGC0LjRidC1INCh0L7RhNC40Y8sIFNvZmlh!5e0!3m2!1sen!2sbg!4v1507058243837" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
