--- a/AirTickets/AirTickets.Web/Views/Flight/_FilterFlightsPartial.cshtml
+++ b/AirTickets/AirTickets.Web/Views/Flight/_FilterFlightsPartial.cshtml
@@ -1,11 +1,10 @@
 ﻿@using AirTickets.Web.Models.Flight
+
 @model IEnumerable<FlightViewModel>
 
 <div class="panel">
     @foreach (var flight in Model)
     {
-        @Html.DisplayFor(x => flight)
-        
+        @Html.DisplayFor(c => flight)
     }
 </div>
-
