--- a/AirTickets/AirTickets.Web/Views/Flight/All.cshtml
+++ b/AirTickets/AirTickets.Web/Views/Flight/All.cshtml
@@ -7,6 +7,7 @@
     }, new { id = "ajaxForm" }))
     {
         <input type="text" name="searchTerm" />
+        <button type="submit" class="btn btn-warning">Search</button>
     }
 </div>
 
@@ -19,7 +20,7 @@
 @section scripts {
     <script>
         $(function () {
-            $('[name="searchTerm"]').keyup(function () {
+            $('[name="searchTerm"]').click()(function () {
                 $('#ajaxForm').submit()
             })
         })
