--- a/AirTickets/AirTickets.Web/Views/Flight/_AllFlights.cshtml
+++ b/AirTickets/AirTickets.Web/Views/Flight/_AllFlights.cshtml
@@ -1,5 +1,5 @@
 ﻿@using AirTickets.Web.Models.Flight
-@model IEnumerable<AllFlightInformationView>
+@model IEnumerable<FlightViewModel>
 
 <div class="panel">
     @foreach (var flight in Model)
