Fix AppVeyor settings

--- a/AirTickets/AirTickets.Web/Views/Flight/GetFlight.cshtml
+++ b/AirTickets/AirTickets.Web/Views/Flight/GetFlight.cshtml
@@ -9,7 +9,7 @@
     }*@
 
 
-@using AirTickets.Web.Models
+@using AirTickets.Web.Models.Flight
 @model IEnumerable<FlightViewModel>
 
     @using (Html.BeginForm("GetFlight", "Flight", FormMethod.Post))
