--- a/AirTickets/AirTickets.Web/Views/Flight/_FilterFlightsPartial.cshtml
+++ b/AirTickets/AirTickets.Web/Views/Flight/_FilterFlightsPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using AirTickets.Web.Models.Flight
 
-@model IEnumerable<AllFlightInformationView>
+@model IEnumerable<FlightViewModel>
 
 <div class="panel">
     @foreach (var flight in Model)
