--- a/AirTickets/AirTickets.Web/Views/Home/Index.cshtml
+++ b/AirTickets/AirTickets.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -16,11 +17,22 @@
 
 <div class="row top-buffer"></div>
 
-<div class="left"><h5>Date</h5></div>
+<div class="text-center"><h4>Destinations</h4></div>
 
-<div class="demo-section k-content">
-    <div id="special-days">
-        @(Html.Kendo().Calendar()
+<div class="container">
+    <div class="row">
+        <div class="col-md-12" id="airportPanel">
+            @Html.Action("AllAirports")
+        </div>
+    </div>
+
+    <div class="row top-buffer"></div>
+
+    <div class="left"><h5>Date</h5></div>
+
+    <div class="row">
+        <div class="col-md-12" id="special-days">
+            @(Html.Kendo().Calendar()
         .Name("calendar")
         .Value(DateTime.Today)
         .WeekNumber(true)
@@ -39,11 +51,10 @@
                     "#= data.value #" +
                     "# } #")
             .WeekNumber("<a class='italic'>#= data.weekNumber #</a>"))
-        )
+            )
+        </div>
     </div>
 </div>
-
-
 
 <script>
     var today = new Date(),
@@ -63,8 +74,8 @@
 </script>
 
 <style>
-    .top-buffer { 
-        margin-top:20px;
+    .top-buffer {
+        margin-top: 20px;
     }
 
     #calendar {
